# Merc_translation_proj

./: .gitignore  CRC_PATCH_GUIDE.md  FONT_REPLACEMENT_GUIDE.md  OFFLINE_MODE_GUIDE.md  README.md  Setup.cmd  TEXT_EXTRACTION_GUIDE.md  bundle_cache.py  decrypt_and_parse.py  deploy_bundles.py  extract_all.py  extract_all_separate.py  extract_dialogue.py  extract_masterdata.py  extract_metadata_full.py  extract_story.py  extract_story_metadata.py  fix_speakers3.py  font_swap.py  merc_decrypt.py  merc_storia_toolkit.py  mercstoria_config.py  patch_crc.py  patch_crc3.py  patch_offline.py  pyproject.toml  read_catalog.py  repack.py  translate_1621.py  verify_offline_patch.py  verify_patches.py  verify_repack.py
docs/: CRC_PATCH_GUIDE.md  CRC_PATCH_GUIDE_zh-CN.md  FONT_REPLACEMENT_GUIDE.md  FONT_REPLACEMENT_GUIDE_zh-CN.md  MASTERDATA_SCHEMA_GUIDE.md  MASTERDATA_SCHEMA_GUIDE_zh-CN.md  MEMORYPACK_SCHEMA_GUIDE.md  MEMORYPACK_SCHEMA_GUIDE_zh-CN.md  METADATA_PATCH_GUIDE.md  METADATA_PATCH_GUIDE_zh-CN.md  OFFLINE_MODE_GUIDE.md  OFFLINE_MODE_GUIDE_zh-CN.md  README_zh-CN.md  STORY_BUNDLE_GUIDE.md  STORY_BUNDLE_GUIDE_zh-CN.md  TEXT_EXTRACTION_GUIDE.md  TEXT_EXTRACTION_GUIDE_zh-CN.md  UI_ATLAS_GUIDE.md  UI_ATLAS_GUIDE_zh-CN.md
launcher/: CMakeLists.txt  README.md  README_zh-CN.md
launcher/cmake/: RunJunctionTest.cmake
launcher/res/: launcher.rc
launcher/src/: junction.c  junction.h  launcher.c
launcher/test/: test_junction.c
mercstoria/: __init__.py  __main__.py  config.py  memorypack.py
scripts/: bundle_cache.py  check_roundtrip.py  deploy.py  export_chars.py  extract_repack.py  extract_ui.py  extract_ui_atlas.py  font_swap.py  patch_crc.py  patch_metadata.py  patch_offline.py  release.py  setup.py  verify_patches.py
